@@ -29,6 +29,8 @@ The wizard now accepts `lein new` template arguments. Simply put them after the 
   - You can use arrow keys, copy keys in the REPL output area
   - You can use Tab key to switch to the REPL input area
 - `Outline View`: There were unexpected exceptions thrown depending on the content of the Editor. These were due to `java.lang.Comparator` contract violations. Fix Issue #639
+- `Editor`: In strict/paredit mode, forward/backward delete do not prevent to remove `#` in front of `()` or `{}` or `""`. Also, fixed a bug where forward delete allowed to remove `(` or `{` or `"` if there was a leading `#`. Fix Issue #523 
+  - Also changed a behavior: the cursor is not stuck, either something is deleted, either the cursors moves forward or backward
 
 == Changes between Counterclockwise 0.25.1 and 0.25.2
 
